--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">Pop Movies</string>
     <string name="package_name" translatable="false">app.com.vladimirjeune.popmovies</string>
+
+    <!-- Settings -->
+    <string name="action_settings">Settings</string>
+    <string name="action_about">About</string>
+
 </resources>
