--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,6 @@
     <string name="action_details">Details</string>
     <string name="about_tmdb_logo">The Movie Database Logo</string>
     <string name="about_tmdb_legal">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
+    <string name="warning_toast_internet">No internet connection. Enable internet for updated data.</string>
 
 </resources>
