--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,8 @@
     <string name="pref_sort_default" translatable="false">popular</string>
     <string name="pref_sort_popular_label">Popular</string>
     <string name="pref_sort_popular" translatable="false">popular</string>
-    <string name="pref_sort_top_rated_label">Top Rated</string>
     <string name="pref_sort_top_rated" translatable="false">top rated</string>
+    <string name="pref_sort_top_rated_label">Top Rated</string>
 
     <string name="pref_sort_popular_value" translatable="false">popular</string>
     <string name="pref_sort_top_rated_value" translatable="false">top rated</string>
@@ -23,7 +23,7 @@
     <string name="tools_lorem_paragraph" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id felis sed arcu vehicula aliquet. Donec nec elementum erat, eget vulputate enim. Nam ultricies mi id lacus malesuada, eu ullamcorper neque accumsan. Sed nec risus ante. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nunc tempor enim interdum tortor semper, varius molestie eros feugiat. Donec nec mi dolor.</string>
 
     <!-- DetailActivity -->
-    <string name="detail_out_of_10">/10</string>
+    <string name="detail_out_of_10" translatable="false">/10</string>
     <string name="detail_rating">RATING</string>
     <string name="detail_release">RELEASE</string>
     <string name="detail_runtime">RUNTIME</string>
