feat: Prep MovieAdapter and Main for Diaolgs, Fix Back Btn on Details
Do not use the Dialogs yet, you are now not sure if you need them here.
May want to use them on Details only.  Fix the Back Button to work like
the Up button since we know that the previous Activity for Details will
always (for now) be MainActivity.  May want to refine when the previous
Activity has to do a whole reload at a later date.  Probably should be
based on what has visibly changed.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,8 +42,13 @@
     <string name="toast_detail_favorite_on">Favorited: <xliff:g id="movieAdd">%1$s</xliff:g></string>
     <string name="toast_detail_favorite_off">Unfavorited: <xliff:g id="movieRemove">%1$s</xliff:g></string>
 
+    <!-- Dialogs -->
+    <string name="dialog_remove_favorite">Remove movie from favorites?</string>
+
     <!-- a11y -->
     <string name="a11y_poster">Poster for <xliff:g id="poster">%1$s</xliff:g></string>
     <string name="a11y_tmdb_logo">The Movie Database Logo</string>
+    <string name="dialog_remove_button">REMOVE</string>
+    <string name="dialog_cancel_button">CANCEL</string>
 
 </resources>
