feat: Continue prep for adding RecyclerView to Details for Reviews
Fix up Item, and add RecyclerView to XML for use later in class.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="detail_release">RELEASE</string>
     <string name="detail_runtime">RUNTIME</string>
     <string name="detail_synopsis">SYNOPSIS</string>
+    <string name="detail_reviews">REVIEWS</string>
     <string name="action_details">Details</string>
 
     <!-- About -->
