feat: Add code for Review RecyclerView and No Reviews Text
Will need to modify XML for other orientations later.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="detail_synopsis">SYNOPSIS</string>
     <string name="detail_reviews">REVIEWS</string>
     <string name="action_details">Details</string>
+    <string name="detail_review_no_review">Currently, no reviews for, <xliff:g id="noReviews">%1$s</xliff:g></string>
 
     <!-- About -->
     <string name="about_tmdb_legal">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
