--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="detail_reviews">REVIEWS</string>
     <string name="action_details">Details</string>
     <string name="detail_review_no_review">Currently, no reviews for, <xliff:g id="noReviews">%1$s</xliff:g></string>
+    <string name="detail_review_grid_button">MORE…</string>
 
     <!-- About -->
     <string name="about_tmdb_legal">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
