fix: Fix rotation for v21.  Other version will have to come later
Make it so you are able to rotate without crashing.  At least for
version 21.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="detail_synopsis">SYNOPSIS</string>
     <string name="detail_reviews">REVIEWS</string>
     <string name="action_details">Details</string>
-    <string name="detail_review_no_review">Currently, no reviews for, <xliff:g id="noReviews">%1$s</xliff:g></string>
+    <string name="detail_review_no_review">Currently, no reviews for; <xliff:g id="noReviews">%1$s</xliff:g>.</string>
     <string name="detail_review_grid_button">MORE…</string>
 
     <!-- About -->
