--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,9 @@
     <string name="detail_media_no_media">Currently, no media for; <xliff:g id="noMedia">%1$s</xliff:g>.</string>
     <string name="detail_review_grid_button">MORE…</string>
 
+    <!-- DetailActivity, Share -->
+    <string name="detail_share_message">A friend thought you would be interested in this <xliff:g id="type" example="Featurette">%1$s</xliff:g> for: <xliff:g id="movie" example="Black Panther">%2$s</xliff:g>\n\n<xliff:g id="url" example="https://www.youtube.com/watch?v=coOKvrsmQiI">%3$s</xliff:g>\n\nMessage from Pop Movies (available on Google Play Store)</string>
+
     <!-- About -->
     <string name="about_tmdb_legal">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
 
